--- a/Calc.HTML
+++ b/Calc.HTML
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="Styles/Calc.CSS">
+    <script src="Styles/Calc.JS"></script>
 </head>
 <header>
     <h1>My Calculator App</h1>
