--- a/Calc.HTML
+++ b/Calc.HTML
@@ -7,3 +7,21 @@
 <header>
     <h1>My Calculator App</h1>
 </header>
+<body>
+    <div class="numberPad">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>+</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>-</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>/</button>
+        <button>0</button>
+        <button>=</button>
+    </div>
+</body>
