Addition of CSS

--- a/Calc.HTML
+++ b/Calc.HTML
@@ -8,20 +8,27 @@
     <h1>My Calculator App</h1>
 </header>
 <body>
-    <div class="numberPad">
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>+</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>-</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>/</button>
-        <button>0</button>
-        <button>=</button>
+    <div class="display">
+        <h2 class="value">0</h2>
+    </div>
+    <div class="numberPadWrap">
+        <div class="numberPad">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button class="funcButton">+</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button class="funcButton">-</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button class="funcButton">/</button>
+            <button class="funcButton">AC</button>
+            <button>0</button>
+            <button class="funcButton">C</button>
+            <button class="funcButton">=</button>
+        </div>
     </div>
 </body>
