Alteration of CSS

--- a/Calc.HTML
+++ b/Calc.HTML
@@ -13,22 +13,22 @@
     </div>
     <div class="numberPadWrap">
         <div class="numberPad">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button class="funcButton">+</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button class="funcButton">-</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button class="funcButton">/</button>
-            <button class="funcButton">AC</button>
-            <button>0</button>
-            <button class="funcButton">C</button>
-            <button class="funcButton">=</button>
+            <button class="dataNum">1</button>
+            <button class="dataNum">2</button>
+            <button class="dataNum">3</button>
+            <button class="dataOp">+</button>
+            <button class="dataNum">4</button>
+            <button class="dataNum">5</button>
+            <button class="dataNum">6</button>
+            <button class="dataOp">-</button>
+            <button class="dataNum">7</button>
+            <button class="dataNum">8</button>
+            <button class="dataNum">9</button>
+            <button class="dataOp">/</button>
+            <button class="dataClear">AC</button>
+            <button class="dataNum">0</button>
+            <button class="dataOp">.</button>
+            <button class="dataEquals" style="background-color: yellow;">=</button>
         </div>
     </div>
 </body>
